kube/graveyard/plex/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-udp
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex
  labels:
    app: plexserver
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.221
  externalTrafficPolicy: Local
  ports:
    - name: plex
      port: 32400
      protocol: UDP
    - name: dnla-udp
      port: 1900
      protocol: UDP
    - name: discovery
      port: 5353
      protocol: UDP
    - name: gdm32410
      port: 32410
      protocol: UDP
    - name: gdm32412
      port: 32412
      protocol: UDP
    - name: gdm32413
      port: 32413
      protocol: UDP
    - name: gdm32414
      port: 32414
      protocol: UDP
  selector:
    app: plexserver
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: plex-tcp
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: plex
  labels:
    app: plexserver
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.221
  externalTrafficPolicy: Local
  ports:
    - name: plex
      port: 32400
      protocol: TCP
    - name: dnla-tcp
      port: 32469
      protocol: TCP
  selector:
    app: plexserver
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  labels:
    app: plexserver
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plex.matthew-stratton.me
    secretName: plex-tls
  rules:
  - host: plex.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: plex-tcp
            port:
              number: 32400
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: plex-direct
  namespace: plex
  labels:
    app: plexserver
spec:
  type: NodePort
  ports:
    - name: plex
      port: 32400
      protocol: TCP
      nodePort: 32400
  selector:
    app: plexserver
